# guardian-audio-gate

./: # Claude Code doesn't exist as npm package - skip it  # Claude Code doesn't exist as npm package - skip it.pub  .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  timeline_export.csv
docs/: ENGINEERING_CHALLENGES.md  Production Validation  WEEK5_DEBUG.md  week6_bug_story.md
docs/measurements/: ppk2_week7_baseline__sleep
docs/optimizations/: week15-16-validation.md
firmware/: CMakeLists.txt  prj.conf  prj.conf.backup  prj_ble_jitter.conf  prj_power_test.conf  prj_week6_backup.conf
firmware/lib/ei_model/: CMakeLists.txt  README.txt
firmware/lib/ei_model/model-parameters/: model_metadata.h  model_variables.h
firmware/lib/ei_model/tflite-model/: tflite_learn_941781_4_compiled.cpp  tflite_learn_941781_4_compiled.h
firmware/lib/guardian_dsp/: CMakeLists.txt
firmware/lib/guardian_dsp/include/: resonator_coefs_cmsis.h
firmware/lib/guardian_dsp/include/guardian/: resonator_df2t.h
firmware/lib/guardian_dsp/include/guardian/audio/: dma_pdm.h  mic_cal.h  preprocess.h
firmware/lib/guardian_dsp/include/guardian/features/: coherence.h  correlation.h  energy.h  flux.h  modulation.h  spectral_flatness.h  zcr.h
firmware/lib/guardian_dsp/src/: resonator_df2t.c
firmware/lib/guardian_dsp/src/audio/: dma_pdm.c  mic_cal.c  preprocess.c
firmware/lib/guardian_dsp/src/features/: coherence.c  correlation.c  energy.c  flux.c  modulation.c  spectral_flatness.c  zcr.c
firmware/lib/guardian_gate/: CMakeLists.txt
firmware/lib/guardian_gate/include/guardian/gate/: decision.h
firmware/lib/guardian_gate/src/: decision.c
firmware/lib/guardian_sdk/: CMakeLists.txt
firmware/lib/guardian_sdk/include/guardian/sdk/: biquad_df1.h  prefilter.h
firmware/lib/guardian_sdk/src/: biquad_df1.c  prefilter.c  resonator_coefs_default.h
firmware/src/: ei_classifier_wrapper.cpp  ei_classifier_wrapper.h  main.c  main.c.backup  main.c.backup_WEEEK5  main_week6_backup.c
firmware/src/testdata/: noise_sample.h  speech_sample.h
results/: det_curve_20260324_120434.csv  power_compare_20260318_072152.csv  power_model_20260324_115839.csv  sqnr_analysis_20260324_115827.csv  week10_validation_20260324_113145.csv
results/audio_test_set/: labels.csv
tools/: degrade_dataset.py  det_curve.py  det_librispeech_esc50.py  det_real_speech.py  plot_freq_response.py  plot_frequency_response.py  power_model.py  record_test_set.py  sqnr_analysis.py  test_agc_gate_separation.py  test_hardware.py  test_multi_env.py  test_real_audio.py  test_stability.py  validate_gate_on_real_audio.py  wav_to_c_array.py
tools/analyze_systemview/: analyze_serial_log.py  analyze_systemview.py  compare_vad.py  ctx_fixed.csv  ctx_problem.csv  gate_log.txt  noise_log.txt  prio_fixed.txt  prio_problem.txt  sine_log.txt  stress_10min.txt  tinyml_blocking.csv  tinyml_threaded.csv  trace_log.csv  visualize_trace.py
tools/coefficient_generation/: generate_cmsis_resonator_coefs.py
tools/power_measurement/: measure_power.py  power_compare_3modes.py  ppk2_power_compare.py  week7_power_test.py
zephyr/: module.yml
